--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,27 +5,24 @@ edition = "2021"
 authors = ["Dean 利迪恩", "bergabman"]
 
 [dependencies]
-anyhow = "1.0.81"
-base64 = "0.22.0"
+anyhow = "1.0.93"
 bs58 = "0.5.1"
-clap = { version = "4.4.8", features = ["derive", "cargo"] }
+clap = { version = "4.5.20", features = ["derive", "cargo"] }
 dialoguer = "0.11.0"
-rayon = "1.8.0"
-borsh = "1.3.1"
-solana-sdk = "=1.18.1"
-solana-client = "=1.18.1"
-solana-ledger = "=1.18.1"
-solana-runtime = "=1.18.1"
-solana-account-decoder = "=1.18.1"
-solana-program-test = "=1.18.1"
-spl-token = "4.0.0"
-serde_json = "1.0.114"
-serde = { version = "1.0.197", features = ["derive"] }
+rayon = "1.10.0"
+borsh = "1.5.2"
+solana-sdk = "=2.0.8"
+solana-client = "=2.0.8"
+solana-ledger = "=2.0.8"
+solana-runtime = "=2.0.8"
+solana-account-decoder = "=2.0.8"
+solana-program-test = "=2.0.8"
+spl-token = "=6.0.0"
+serde_json = "1.0.132"
+serde = { version = "1.0.214", features = ["derive"] }
 anchor-lang = { version = "0.29.0", features = ["idl-build"]}
-flate2 = "1.0.28"
+flate2 = "1.0.34"
 bincode = "1.3.3"
-tempfile = "3.10.1"
-convert_case = "0.6"
 
 [profile.release]
 strip = true
